# Libra

./: .gitignore  CUSTOM_DATA.md  LICENSE  README.md  pyproject.toml
assets/: readme.md
docs/ko/: 01_architecture_analysis.md  02_temporal_pairing.md  03_training_guide.md  04_complete_settings_lora.md  05_evaluation_metrics.md  06_h100_optimization.md  README.md
libra/: __init__.py  conversation.py  mm_utils.py  utils.py
libra/eval/: __init__.py  eval_vqa_libra.py  radiology_report.py  run_libra.py  temporal_f1.py
libra/model/: __init__.py  builder.py  libra_arch.py
libra/model/language_model/: __init__.py  libra_gemma.py  libra_llama.py  libra_mistral.py  libra_phi3.py  libra_qwen2.py  libra_qwen3.py
libra/model/multimodal_encoder/: __init__.py  builder.py  clip_encoder.py  dino_encoder.py  siglip_encoder.py
libra/model/multimodal_encoder/open_clip_encoder/: open_clip_encoder.py
libra/model/multimodal_projector/: __init__.py  builder.py
libra/serve/: app.py  cli.py
libra/train/: __init__.py  libra_trainer.py  llama2_flash_attn_monkey_patch.py  llama_flash_attn_monkey_patch.py  llama_xformers_attn_monkey_patch.py  train.py  train_mem.py  train_xformers.py
scripts/: finetune.sh  finetune_lora.sh  libra_eval.sh  merge_lora_weights.py  pretrain.sh  pretrain_xformers.sh
scripts/eval/: get_eval_scores.sh  libra_eval.sh
scripts/mimic-cxr/: create_section_files.py  section_parser.py
