[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libra"
version = "1.0.3"
description = "Libra: Leveraging Temporal Images for Biomedical Radiology Analysis"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers==4.51.3",
    "tokenizers==0.21.1",  # Modified for compatible transformers range
    "sentencepiece==0.1.99",
    "shortuuid",
    "accelerate==1.6.0",
    "peft==0.4.0",
    "bitsandbytes==0.41.0",
    "pydantic==2.11.4",
    "markdown2[all]",
    "numpy==1.26.4",
    "scikit-learn==1.2.2",
    "gradio",
    "requests",
    "httpx==0.28.1",
    "uvicorn",
    "fastapi",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==1.0.15",
    "pydicom",
    "tqdm",
    "open-clip-torch==2.23.0",
    "protobuf==3.20.*",
    "datasets",
]

[project.optional-dependencies]
train = ["deepspeed==0.16.7", "ninja", "wandb", "xformers==0.0.27.post2"]
eval = ["evaluate", "rouge_score", "absl-py", "nltk", "bert_score"]

[project.urls]
"Bug Tracker" = "https://github.com/X-iZhang/Libra/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]